# Summer-Practice

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt
lib/include/: array.h  circle.h  matrix.h  mystring.h  requires.h  sport.h  stack.h  student.h
lib/src/: array.c  circle.c  matrix.c  mystring.c  sport.c  stack.c  student.c
src/10/: main.c
src/11/: main.c
src/12/: main.c
src/13.1/: main.c
src/13.2/: main.c
src/14.1/: main.c
src/14.2/: main.c
src/14.3/: main.c
src/2.1/: main.c
src/2.2/: main.c
src/3.1/: main.c
src/3.3/: main.c
src/4.2/: main.c
src/5/: main.c
src/6.1/: main.c
src/7.1/: main.c
src/7.2/: main.c
src/8/: main.c
src/9/: main.c
src/ArrayCalculate/: main.c
src/Champions/: main.c
src/DoesCircleContainPoint/: main.c
src/DynamicString/: main.c
src/Files1/: main.c
src/Files2/: main.c
src/MatrixCalculate2/: main.c
src/MatrixCalculate3/: main.c
src/MatrixCalculate4/: main.c
src/MatrixCalculate5/: main.c
src/Recursion/: main.c
src/Stack/: main.c
src/String1/: main.c
src/Strings2/: main.c
src/Strings3/: main.c
src/Students/: main.c  students.txt
src/UserFunction1/: main.c
src/UserFunction2/: main.c
src/Votes/: main.c
